# neatproto

./: LICENSE  README.md
bindings/csharp/: NeatProto.csproj  NeatProto.sln  TaggedUnion.cs  Utf8JsonReaderExtensions.cs  Utf8JsonWriterExtensions.cs
compiler/: Cargo.toml
compiler/crates/analysis/: Cargo.toml
compiler/crates/analysis/src/: lib.rs
compiler/crates/ast/: Cargo.toml
compiler/crates/ast/src/: lib.rs  nodes.rs  token.rs  types.rs
compiler/crates/benches/: Cargo.toml
compiler/crates/codegen/: Cargo.toml
compiler/crates/codegen/src/: lib.rs  rust.rs  writer.rs
compiler/crates/compiler/: Cargo.toml
compiler/crates/compiler/src/: lib.rs
compiler/crates/parser/src/: error.rs  lib.rs
crates/analysis/src/: lib.rs
crates/ast/src/: nodes.rs  token.rs  types.rs
crates/benches/benches/: bench.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: csharp.rs  lib.rs  rust.rs  writer.rs
crates/compiler/src/: error.rs  lib.rs  unit.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  source_file.rs  tokens.rs
crates/parser/src/nodes/: alias.rs  block.rs  enum.rs  mod.rs  structure.rs
examples/: basic.nproto
