[package]
name = "neatproto-benches"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
neatproto-compiler = { path = "../compiler" }
neatproto-codegen = { path = "../codegen" }
neatproto-parser = { path = "../parser" }

[[bench]]
name = "bench"
harness = false
