[package]
name = "neatproto-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
convert_case = { workspace = true }
neatproto-analysis = { path = "../analysis" }
neatproto-ast = { path = "../ast" }
neatproto-codegen = { path = "../codegen" }
neatproto-parser = { path = "../parser" }